--- a/public/styles/court-card.css
+++ b/public/styles/court-card.css
@@ -1,10 +1,16 @@
 /* court-card.css */
 .layout {
-  @apply flex transition-all duration-[0.3s] ease-[ease];
+  @apply flex-1 transition-all duration-[0.3s] ease-[ease];
 }
 
 .sidebar-open .page-container {
-  @apply mx-auto;
+  @apply ml-0;
+}
+
+@media (min-width: 769px) {
+  .sidebar-open .page-container {
+    margin-left: 250px;
+  }
 }
 
 .page-container {
