--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -6,7 +6,7 @@
 /* user_registration.css */
 body {
     @apply items-center justify-center min-h-screen overflow-x-hidden m-0 p-0;
-    background: linear-gradient(to bottom right, #46a4d6, #2e7add);
+    background: linear-gradient(to bottom right, #42A5F5, #1565C0);
   }
   .form-container {
     @apply w-full max-w-[500px] shadow-[0px_8px_15px_rgba(0,0,0,0.1)] overflow-hidden animate-[slide-in_0.5s_ease-in-out] mx-auto my-0 rounded-xl;
